# digital-circuit-simulation

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README-zh.md  README.md  main.cpp
.github/workflows/: ci.yml
examples/jsons/: test_ha.json  test_pipeline.json  test_print.json  test_state4.json  test_tribus.json
include/dcs/: Circuit.h  CircuitLibrary.h  Component.h  ComponentFactory.h  IStorage.h  Net.h  Pin.h  dll_interface.h
include/dcs/components/: Arithmetic.h  BarrelShifter.h  Composite.h  DelayLine.h  Dll.h  FIFO.h  FloatPoint.h  FloatPrint.h  Gates.h  Memory.h  Misc.h  MultiPortRAM.h  Print.h  PriorityEncoder.h  ROM.h  Reduction.h  Sequential.h  Shifter.h  SignExt.h
include/dcs/util/: ExePath.h
shim/: dcs_stdbool.h  dcs_stdint.h  dcs_util.h
src/: Circuit.cpp  CircuitLibrary.cpp  Component.cpp  ComponentFactory.cpp  Net.cpp  Pin.cpp
src/components/: Arithmetic.cpp  BarrelShifter.cpp  Composite.cpp  DelayLine.cpp  Dll.cpp  FIFO.cpp  FloatPoint.cpp  FloatPrint.cpp  Gates.cpp  Memory.cpp  Misc.cpp  MultiPortRAM.cpp  Print.cpp  PriorityEncoder.cpp  ROM.cpp  Reduction.cpp  Sequential.cpp  Shifter.cpp  SignExt.cpp
src/util/: ExePath.cpp
tests/: dll_test_and.c  test_arithmetic.cpp  test_bitwidths.cpp  test_circuit.cpp  test_composite.cpp  test_dll.cpp  test_float.json  test_float_seq.json  test_gates.cpp  test_json.cpp  test_misc.cpp  test_sequential.cpp
tests/test_arithmetic/: abs.cpp  adder.cpp  divider.cpp  minmax.cpp  mux.cpp  others.cpp
tests/test_barrel/: barrel.cpp  shifter.cpp
tests/test_bitwidths/: adder.cpp  arithmetic.cpp  common.h  gates.cpp  misc.cpp  sequential.cpp
tests/test_circuit/: disconnect.cpp  errors.cpp  loop_detect.cpp  pin_attr.cpp  pipeline.cpp  wire.cpp
tests/test_composite/: common.h  full_adder.cpp  half_adder.cpp  unique_ids.cpp
tests/test_delay/: basic.cpp  multi_tick.cpp  no_clock.cpp  reset.cpp  ring.cpp
tests/test_dll/: common.h  load.cpp  recompile.cpp
tests/test_fifo/: fifo.cpp
tests/test_floatpoint/: f2i.cpp  fadd.cpp  fcmp.cpp  fconst.cpp  fdiv.cpp  fmul.cpp  fsub.cpp  i2f.cpp
tests/test_gates/: basic_gates.cpp  common.h  not_buf.cpp  reduction.cpp  tsbuf.cpp
tests/test_json/: basic.cpp  composite.cpp  factory.cpp  sequential.cpp
tests/test_misc/: constant.cpp  errors.cpp  memory.cpp  memory_advanced.cpp  merge_split.cpp  rom.cpp  switch.cpp
tests/test_mpram/: mpram.cpp
tests/test_prienc/: prienc.cpp
tests/test_print/: fprint.cpp  print.cpp
tests/test_sequential/: clkdiv.cpp  clkgen.cpp  counter.cpp  dff.cpp  edgedet.cpp  jkff.cpp  latch.cpp  rebuild.cpp  register.cpp  shift.cpp  tff.cpp
tests/test_signext/: signext.cpp
tests/test_verilog/: adder8.cpp
tools/: dcs_tool.cpp
verilog_test/: CMakeLists.txt  adder8.v  counter8.v  reg8.v  test_adder8.json  test_counter8.json  test_reg8.json  wrap_adder8.cpp  wrap_counter8.cpp  wrap_reg8.cpp
